--- a/docs/get-started/introduction.mdx
+++ b/docs/get-started/introduction.mdx
@@ -3,13 +3,13 @@ title: Introduction
 description: "Welcome to HelloCSV"
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero.png"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero.png"
-  alt="Hero Dark"
-/>
+<video
+  className="w-full rounded-lg shadow-lg"
+  autoPlay
+  loop
+  muted
+  playsInline
+  controls
+>
+  <source src="/images/demo.mp4" type="video/mp4" />
+</video>
