--- a/docs/get-started/introduction.mdx
+++ b/docs/get-started/introduction.mdx
@@ -11,5 +11,5 @@ description: "Welcome to HelloCSV"
   playsInline
   controls
 >
-  <source src="/images/demo.mp4" type="video/mp4" />
+  <source src="https://github.com/HelloCSV/HelloCSV/blob/main/example/src/assets/images/demo.mp4" type="video/mp4" />
 </video>
