change to callback

--- a/docs/v0.1.0/api-reference/importer-state.mdx
+++ b/docs/v0.1.0/api-reference/importer-state.mdx
@@ -100,3 +100,19 @@ Mappings between CSV columns and sheet columns.
 
 **Description:**  
 Import progress percentage (0-100).
+
+---
+
+## importStatistics
+
+**Type:** `ImportStatistics`
+
+**Required:** No
+
+**Description:**  
+Statistics about the import.
+
+**Fields:**
+- `imported`: number - Number of rows successfully imported
+- `failed`: number - Number of rows that failed to import
+- `skipped`: number - Number of rows that were skipped during import
