Update app version in demo app

--- a/docs/common/development/deployment.mdx
+++ b/docs/common/development/deployment.mdx
@@ -21,8 +21,10 @@ For major version realease
 - create a new version entry in `docs/docs.json` file
 - write upgrade guide and put it in the docs
 
-4. Create a PR in the repository called `Release v{x.y.z}`
+4. Update version in demo app - `InstallTabs.tsx::vanilla`
 
-5. Run `npm publish` in the root directory, you can use `--dry-run` flag to test the deployment
+5. Create a PR in the repository called `Release v{x.y.z}`
 
-6. Create a new release in Github - https://github.com/HelloCSV/HelloCSV/releases. Remember about creating a tag (`v{x.y.z}`) and writing release notes.
+6. Run `npm publish` in the root directory, you can use `--dry-run` flag to test the deployment
+
+7. Create a new release in Github - https://github.com/HelloCSV/HelloCSV/releases. Remember about creating a tag (`v{x.y.z}`) and writing release notes.
