update deployment steps

--- a/docs/common/development/deployment.mdx
+++ b/docs/common/development/deployment.mdx
@@ -21,7 +21,7 @@ For major version realease
 - create a new version entry in `docs/docs.json` file
 - write upgrade guide and put it in the docs
 
-4. Update version in demo app - `InstallTabs.tsx::vanilla`
+4. Update version in `InstallTabs.tsx::no build`, `example/index.html`, and `README.md`
 
 5. Create a PR in the repository called `Release v{x.y.z}`
 
