--- a/docs/common/get-started/usage.mdx
+++ b/docs/common/get-started/usage.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Usage"
+title: 'Usage'
 ---
 
 ## Installation
@@ -95,6 +95,7 @@ import 'hello-csv/peer/index.css';
   onComplete={(data) => {
     console.log(data);
   }}
+  indexDBConfig={{ enabled: true }}
 />;
 ```
 
