revert docs version to v01.1.1

--- a/docs/v0.1.1/api-reference/importer-props.mdx
+++ b/docs/v0.1.1/api-reference/importer-props.mdx
@@ -121,7 +121,7 @@ Callback executed when the user has finished reviewing the import summary. This 
 
 ---
 
-## indexDBConfig
+## indexDBConfig (releasing on version 0.1.2)
 
 **Type:** `{ enabled: boolean; customKey?: string }`
 
