--- a/docs/v0.1.1/api-reference/importer-props.mdx
+++ b/docs/v0.1.1/api-reference/importer-props.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Importer Props'
+title: "Importer Props"
 ---
 
 This section details each property available for the Importer component.
