--- a/docs/common/development/deployment.mdx
+++ b/docs/common/development/deployment.mdx
@@ -28,3 +28,5 @@ For major version realease
 6. Run `npm publish` in the root directory, you can use `--dry-run` flag to test the deployment
 
 7. Create a new release in Github - https://github.com/HelloCSV/HelloCSV/releases. Remember about creating a tag (`v{x.y.z}`) and writing release notes.
+
+8. Merge `main` to `release` branch - this would trigger docs deployment to Mintlify.
