Add info about the branch

--- a/docs/common/development/deployment.mdx
+++ b/docs/common/development/deployment.mdx
@@ -4,7 +4,7 @@ title: "Deployment"
 
 Deployment is done with the following steps
 
-1. Change version in `package.json` (to the target version)
+1. Change version in `package.json` (to the target version) - use branch `release/v{x.y.z}`
 
 2. Run `npm i` in the root directory as well as in `example` and `example-vanilla` directories
 
