Update to production

--- a/docs/common/development/deployment.mdx
+++ b/docs/common/development/deployment.mdx
@@ -29,4 +29,4 @@ For major version realease
 
 7. Create a new release in Github - https://github.com/HelloCSV/HelloCSV/releases. Remember about creating a tag (`v{x.y.z}`) and writing release notes.
 
-8. Merge `main` to `release` branch - this would trigger docs deployment to Mintlify.
+8. Merge `main` to `production` branch - this would trigger docs deployment to Mintlify.
