--- a/docs/v0.1.2/api-reference/importer-props.mdx
+++ b/docs/v0.1.2/api-reference/importer-props.mdx
@@ -121,7 +121,7 @@ Callback executed when the user has finished reviewing the import summary. This 
 
 ---
 
-## indexDBConfig (releasing for `v0.1.2`)
+## indexDBConfig
 
 **Type:** `{ enabled: boolean; customKey?: string }`
 
