Allow using package in React apps

--- a/docs/common/configuration/bundle-versions.mdx
+++ b/docs/common/configuration/bundle-versions.mdx
@@ -1,13 +1,19 @@
 ---
-title: "Peer vs Bundled"
+title: "Bundle Versions"
 ---
 
 This section explains the difference between the two versions of the package.
 
-## /peer
+## /preact
 
 **Description:**  
-Intended for React/Preact projects. Requires `preact` as a peer dependency.
+Intended for Preact projects.
+
+---
+## /react
+
+**Description:**  
+Intended for React projects.
 
 ---
 
