--- a/docs/common/development/setup.mdx
+++ b/docs/common/development/setup.mdx
@@ -17,5 +17,5 @@ npm i && npm run watch
 This runs example application
 
 ```bash
-cd example && npm i && npm run dev
+cd example-preact && npm i && npm run dev
 ```
