--- a/docs/v0.2.0/development/deployment.mdx
+++ b/docs/v0.2.0/development/deployment.mdx
@@ -33,4 +33,6 @@ For major version release
 
 8. Create a new release in Github - https://github.com/HelloCSV/HelloCSV/releases. Remember about creating a tag (`v{x.y.z}`) and writing release notes.
 
-9. Merge `main` to `production` branch - this would trigger docs deployment to Mintlify.
+9. Merge `main` to `production` branch - this would trigger docs deployment to Mintlify
+
+10. Merge the automated PR 'Sync production to main' to keep the `main` branch in sync with the `production` branch
