--- a/docs/v0.1.4/get-started/usage.mdx
+++ b/docs/v0.1.4/get-started/usage.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Usage"
+title: 'Usage'
 ---
 
 ## Installation
@@ -95,7 +95,7 @@ import 'hello-csv/peer/index.css';
   onComplete={(data) => {
     console.log(data);
   }}
-  indexDBConfig={{ enabled: true }}
+  persistenceConfig={{ enabled: true }}
 />;
 ```
 
