--- a/docs/common/get-started/multiple-sheets.mdx
+++ b/docs/common/get-started/multiple-sheets.mdx
@@ -71,7 +71,11 @@ Here is an example HelloCSV definition for the data above:
 
 
 ### Screenshots
+**Preview**
 <img src="/images/multiple-sheets/preview.png" />
+**Mapping**
 <img src="/images/multiple-sheets/mapping.png" />
-<img src="/images/multiple-sheets/companies.png" />
+**Employees Sheet**
 <img src="/images/multiple-sheets/employees.png" />
+**Companies Sheet**
+<img src="/images/multiple-sheets/companies.png" />
