revert documentation for v0.1.4

--- a/docs/v0.1.4/api-reference/importer-props.mdx
+++ b/docs/v0.1.4/api-reference/importer-props.mdx
@@ -121,7 +121,7 @@ Callback executed when the user has finished reviewing the import summary. This 
 
 ---
 
-## persistenceConfig
+## indexDBConfig
 
 **Type:** `{ enabled: boolean; customKey?: string }`
 
