--- a/docs/v0.1.4/get-started/usage.mdx
+++ b/docs/v0.1.4/get-started/usage.mdx
@@ -95,7 +95,7 @@ import 'hello-csv/peer/index.css';
   onComplete={(data) => {
     console.log(data);
   }}
-  persistenceConfig={{ enabled: true }}
+  indexDBConfig={{ enabled: true }}
 />;
 ```
 
