updates for major release

--- a/docs/v0.3.0/upgrade/from-v-0-1-4.mdx
+++ b/docs/v0.3.0/upgrade/from-v-0-1-4.mdx
@@ -1,6 +1,5 @@
 ---
-title: Upgrade from v0.1.4
+title: Upgrade from v0.2.0
 ---
 
-
-- Instead of using `import Importer from 'hello-csv/peer'`, use `import Importer from 'hello-csv/preact'` or `import Importer from 'hello-csv/react'` depending on your framework of choice.
+- `indexDBConfig` importer prop is now `persistenceConfig`
