update persistence config

--- a/docs/common/get-started/persistence.mdx
+++ b/docs/common/get-started/persistence.mdx
@@ -13,7 +13,7 @@ HelloCSV will invalidate any state that is saved if the definition of the import
 ### Persistence Configuration
 
 ```tsx
-export interface IndexDBConfig {
+export interface PersistenceConfig {
   enabled: boolean;
   customKey?: string;
 }
