--- a/docs/v0.3.1/api-reference/common-column-props.mdx
+++ b/docs/v0.3.1/api-reference/common-column-props.mdx
@@ -78,3 +78,25 @@ Array of validation rules.
 
 **Description:**  
 Array of transformation rules.
+
+---
+
+## customRender
+
+**Type:** `(value: ImporterOutputFieldType, displayValue: ImporterOutputFieldType) => ReactNode`
+
+**Required:** No
+
+**Description:**  
+Custom render function for the cell.
+
+The function gets passed
+
+- value - the row value of the cell
+- displayValue - the display value of the cell - that is a value that extracts enum labels and prevents empty values from being displayed. You should use this value to display the cell.
+
+The function should return a ReactNode.
+
+
+
+
