--- a/docs/v0.3.1/api-reference/common-column-props.mdx
+++ b/docs/v0.3.1/api-reference/common-column-props.mdx
@@ -97,6 +97,11 @@ The function gets passed
 
 The function should return a ReactNode.
 
+When rendering the cell you should remember that the background color of the cell could be
+- bg-hello-csv-danger-extra-light - in case of validation errors
+- bg-hello-csv-muted - in case of read only columns
+- default background colors - in other case
+
 
 
 
