--- a/docs/v0.3.1/development/deployment.mdx
+++ b/docs/v0.3.1/development/deployment.mdx
@@ -6,7 +6,7 @@ Deployment is done with the following steps
 
 1. Change version in `package.json` (to the target version) - use branch `release/v{x.y.z}`
 
-2. Run `npm i` in the root directory as well as in `example-preact`, `example-vanilla`, and `example-react` directories
+2. Run `npm i` in the root directory as well as in `example-preact`, `example-vanilla`, `example-react` and `example-next-js` directories
 
 3. Update version in docs
 
