--- a/docs/v0.3.5/api-reference/csv-importer-state-builder.mdx
+++ b/docs/v0.3.5/api-reference/csv-importer-state-builder.mdx
@@ -53,7 +53,10 @@ This method will set the mappings for the current sheet.
 
 **Required to call next steps:** Yes
 
-**Description:**  
+**Description:** 
+
+Remember that this is asynchronous function. Make sure to await the result of it.
+
 Confirm the mappings for the current sheet. This will switch the mode to preview. 
 
 ## getState
