Add true/false labels

--- a/docs/v0.3.8/api-reference/column-types.mdx
+++ b/docs/v0.3.8/api-reference/column-types.mdx
@@ -23,6 +23,9 @@ Numeric column.
 **Description:**  
 Boolean column.
 
+**Additional:**  
+`typeArguments?: { trueLabel?: string, falseLabel?: string }`
+
 ---
 
 ## reference
