--- a/docs/v0.3.8/api-reference/column-types.mdx
+++ b/docs/v0.3.8/api-reference/column-types.mdx
@@ -26,6 +26,9 @@ Boolean column.
 **Additional:**  
 `typeArguments?: { trueLabel?: string, falseLabel?: string }`
 
+**Notes:**
+Default true and false labels are `Yes` and `No`.
+
 ---
 
 ## reference
