Add boolean column (#281)
* Add boolean column

* Add true/false labels

* Add default notes

* Remove example

--- a/docs/v0.3.8/api-reference/column-types.mdx
+++ b/docs/v0.3.8/api-reference/column-types.mdx
@@ -18,6 +18,19 @@ Numeric column.
 
 ---
 
+## boolean
+
+**Description:**  
+Boolean column.
+
+**Additional:**  
+`typeArguments?: { trueLabel?: string, falseLabel?: string }`
+
+**Notes:**
+Default true and false labels are `Yes` and `No`.
+
+---
+
 ## reference
 
 **Description:**  
