feat: add case insensitive unique validator option

--- a/docs/v0.3.9/api-reference/validators.mdx
+++ b/docs/v0.3.9/api-reference/validators.mdx
@@ -26,11 +26,12 @@ Example:
 
 ## unique
 
-**Description:**  
+**Description:**
 Ensures the value is unique across rows.
 
-**Additional:**  
-Accepts an optional `error` message.
+**Additional:**
+Accepts an optional `error` message. Set `caseInsensitive` to `true` to compare
+string values case-insensitively.
 
 ---
 
