Fix race conditions

--- a/docs/v0.4.0/api-reference/importer-state.mdx
+++ b/docs/v0.4.0/api-reference/importer-state.mdx
@@ -48,6 +48,28 @@ List of validation errors.
 
 ---
 
+## validationInProgress
+
+**Type:** `boolean`
+
+**Required:** No
+
+**Description:**
+Indicates whether an asynchronous validation run is currently in progress. When `true`, the importer is computing validation results; components may use this to show global loading indicators.
+
+---
+
+## validationRunId
+
+**Type:** `string`
+
+**Required:** No
+
+**Description:**
+Identifier for the currently running validation batch. This is a short-lived string (UUID or timestamp-based id) that can be used to correlate `VALIDATION_STARTED` / `VALIDATION_COMPLETED` lifecycle events and to ignore stale validation results when multiple validation runs overlap.
+
+---
+
 ## sheetData
 
 **Type:** `SheetState[]`
