Improve docs with regard to major release

--- a/docs/v0.3.9/api-reference/validators.mdx
+++ b/docs/v0.3.9/api-reference/validators.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Validators"
+title: 'Validators'
 ---
 
 This section describes the available validation rules.
@@ -30,8 +30,7 @@ Example:
 Ensures the value is unique across rows.
 
 **Additional:**
-Accepts an optional `error` message. Set `caseInsensitive` to `true` to compare
-string values case-insensitively.
+Accepts an optional `error` message.
 
 ---
 
