--- a/docs/v0.4.0/api-reference/validators.mdx
+++ b/docs/v0.4.0/api-reference/validators.mdx
@@ -30,7 +30,8 @@ Example:
 Ensures the value is unique across rows.
 
 **Additional:**  
-Accepts an optional `error` message.
+Accepts an optional `error` message. Set `caseInsensitive` to `true` to compare
+string values case-insensitively.
 
 ---
 
