--- a/docs/common/get-started/custom-file-loaders.mdx
+++ b/docs/common/get-started/custom-file-loaders.mdx
@@ -1,5 +1,5 @@
 ---
-title: "XLSX & Custom Data Formats"
+title: 'XLSX & Custom Data Formats'
 ---
 
 ## Custom File Loaders
@@ -31,4 +31,5 @@ to the rest of the pipeline.
 The `convert` function supports returning a promise for parsing files server-side if needed.
 
 ### Usage
-See [customFileLoader](https://hellocsv.mintlify.app/v0.3.9/api-reference/importer-props#customfileloaders) prop.
+
+See [customFileLoader](https://hellocsv.mintlify.app/v0.4.0/api-reference/importer-props#customfileloaders) prop.
