--- a/docs/v0.4.0/api-reference/validators.mdx
+++ b/docs/v0.4.0/api-reference/validators.mdx
@@ -96,6 +96,8 @@ Pragmatic email validation based on: https://www.regular-expressions.info/email.
 - Prevents consecutive dots in domain
 - Intentionally not RFC 5322 complete
 
+For more restrictive needs please use [regex_matches](#regex-matches) validator.
+
 **Additional:**  
 Optional `error` message.
 
