--- a/docs/v0.4.0/api-reference/validators.mdx
+++ b/docs/v0.4.0/api-reference/validators.mdx
@@ -90,6 +90,14 @@ Optional `error` message.
 **Description:**  
 Validates email format.
 
+Pragmatic email validation based on: https://www.regular-expressions.info/email.html
+
+- Case-insensitive
+- Prevents consecutive dots in domain
+- Intentionally not RFC 5322 complete
+
+For more restrictive needs please use [regex_matches](#regex-matches) validator.
+
 **Additional:**  
 Optional `error` message.
 
